<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/linearRowrectangletwentysix"
style="@style/groupStylebluegray_2"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:layout_gravity="start"
android:layout_marginStart="@dimen/_22pxh"
android:layout_marginTop="@dimen/_18pxv"
android:layout_marginEnd="@dimen/_22pxh"
android:orientation="horizontal">

<LinearLayout
    android:id="@+id/viewRectangleTwentySix"
    android:layout_width="64dp"
    android:layout_height="69dp"
    android:layout_marginStart="@dimen/_17pxh"
    android:layout_marginTop="@dimen/_9pxv"
    android:layout_marginBottom="@dimen/_9pxv"
    android:background="@color/gray_900_5e"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars" />
</LinearLayout>

<LinearLayout
    android:id="@+id/linearColumnweightTwo"
    android:layout_width="122dp"
    android:layout_height="85dp"
    android:layout_marginStart="@dimen/_7pxh"
    android:layout_marginTop="@dimen/_1pxv"
    android:layout_marginEnd="@dimen/_5pxh"
    android:layout_marginBottom="@dimen/_1pxv"
    android:layout_weight="0.49"
    android:gravity="start"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtProd"
        style="@style/txtInterregular15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_1pxh"
        android:layout_marginEnd="@dimen/_10pxh"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/lbl_omo_500g"
        android:textSize="15dp"
        tools:text="@string/lbl_omo_500g" />

    <TextView
        android:id="@+id/txtqnty"
        style="@style/txtInterregular15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_1pxh"
        android:layout_marginTop="@dimen/_7pxv"
        android:layout_marginEnd="@dimen/_10pxh"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/lbl_qnt_2"
        android:textSize="15dp"
        tools:text="@string/lbl_qnt_2" />

    <TextView
        android:id="@+id/txtPrice"
        style="@style/txtInterregular15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_1pxh"
        android:layout_marginTop="@dimen/_5pxv"
        android:layout_marginEnd="@dimen/_10pxh"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/lbl_price_500"
        android:textSize="15dp"
        tools:text="@string/lbl_price_500" />

</LinearLayout>

<LinearLayout
    android:layout_width="132dp"
    android:layout_height="75dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Code"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/Total"
        style="@style/txtInterregular15"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="@dimen/_4pxv"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/lbl_total_1000"
        android:textSize="18dp"
        tools:text="@string/lbl_total_1000" />
</LinearLayout>
</LinearLayout>