<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/prodCategory"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStyle">
        <ImageView android:id="@+id/imageArrowLeftOne"
            android:layout_gravity="start"
            android:layout_height="@dimen/_25pxh"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_4pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="@dimen/_25pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_arrowleft1"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft1"/>
        <View
            android:background="@drawable/rectangle_bg_gray_900_5e_radius_10"
            android:id="@+id/viewRectangleThirtySeven"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_182pxh"
            android:layout_marginEnd="@dimen/_48pxh"
            android:layout_marginStart="@dimen/_48pxh"
            android:layout_marginTop="@dimen/_12pxv" android:layout_width="@dimen/_182pxh"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnlanguage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_33pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylebluegray_2">
            <TextView android:ellipsize="end"
                android:id="@+id/prodQunatity"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_49pxh"
                android:layout_marginStart="@dimen/_49pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_item_name"
                style="@style/txtInterregular15_2" tools:text="@string/lbl_item_name"/>
            <TextView android:ellipsize="end"
                android:id="@+id/prodPrice"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_49pxh"
                android:layout_marginStart="@dimen/_49pxh"
                android:layout_marginTop="@dimen/_20pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_buying_price"
                style="@style/txtInterregular15_2" tools:text="@string/msg_buying_price"/>
            <TextView android:ellipsize="end"
                android:id="@+id/prodCategoryy"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_49pxh"
                android:layout_marginStart="@dimen/_49pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/msg_selling_price"
                style="@style/txtInterregular15_2" tools:text="@string/msg_selling_price"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguageThree"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_49pxh"
                android:layout_marginStart="@dimen/_49pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_quantity_5"
                style="@style/txtInterregular15_2" tools:text="@string/lbl_quantity_5"/>
            <FrameLayout android:id="@+id/frameStackidescription"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_103pxv"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginEnd="@dimen/_48pxh"
                android:layout_marginStart="@dimen/_49pxh"
                android:layout_marginTop="@dimen/_17pxv" android:layout_width="@dimen/_182pxh">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtIDescription"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_50pxh"
                    android:layout_marginStart="@dimen/_50pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@string/lbl_description"
                    style="@style/txtInterregular15_2" tools:text="@string/lbl_description"/>
                <View
                    android:background="@drawable/rectangle_bg_gray_900_5e_radius_30"
                    android:id="@+id/viewRectangleThirtyNine"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_103pxv" android:layout_width="@dimen/_182pxh"/>
            </FrameLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSave"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_27pxv"
            android:layout_marginEnd="@dimen/_99pxh"
            android:layout_marginStart="@dimen/_99pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_10pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_10pxv" android:singleLine="true"
            android:text="@string/lbl_save2" android:textAllCaps="false"
            style="@style/btnSolidRounded_7" tools:text="@string/lbl_save2"/>
    </LinearLayout>
</layout>
